# ayon-xstudio

./: .gitignore  README.md  create_package.py  mkdocs.yml  package.py  pyproject.toml  ruff.toml
.github/workflows/: deploy_mkdocs.yml
client/ayon_xstudio/: __init__.py  addon.py  constants.py  utils.py  version.py
client/ayon_xstudio/plugins/ftrack/: open_in_xstudio.py
client/ayon_xstudio/plugins/load/: open_in_xstudio.py
client/ayon_xstudio/plugins/loader/: open_in_xstudio.py
docs/: index.md
server/: __init__.py  settings.py
test-build/: 404.html  index.html  license.html  objects.inv
test-build/autoapi/: summary.html
test-build/autoapi/client/ayon_xstudio/: addon.html  constants.html  index.html  utils.html  version.html
test-build/autoapi/client/ayon_xstudio/plugins/: index.html
test-build/autoapi/client/ayon_xstudio/plugins/load/: index.html  open_in_xstudio.html
test-build/autoapi/client/ayon_xstudio/plugins/loader/: index.html  open_in_xstudio.html
test-build/autoapi/server/: index.html  settings.html
test-build/search/: search_index.js  search_index.json
tools/: manage.ps1  manage.sh
